--- a/Contador_JST_CLT/db/TopLevel.lpc.html
+++ b/Contador_JST_CLT/db/TopLevel.lpc.html
@@ -656,6 +656,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >CPU|FLAG_less_item</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >CPU|FLAG_zero_item</TD>
 <TD >4</TD>
 <TD >1</TD>
@@ -674,13 +690,13 @@
 <TR >
 <TD >CPU|ULA_item</TD>
 <TD >18</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >9</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >10</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -741,7 +757,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >12</TD>
+<TD >13</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -769,9 +785,9 @@
 </TR>
 <TR >
 <TD >CPU|LogicaDesvio_item</TD>
-<TD >13</TD>
+<TD >15</TD>
 <TD >0</TD>
-<TD >8</TD>
+<TD >9</TD>
 <TD >0</TD>
 <TD >2</TD>
 <TD >0</TD>
